[tool.poetry]
name = "vr_drawing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^8.1"
numpy = "^1.18.5"
scipy = "^1.4.1"
py2app = "^0.21"
autograd = "^1.3"
requests = "^2.24.0"
polyscope = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
